--- a/style.css
+++ b/style.css
@@ -8,12 +8,14 @@ body, html {
   height: 100%;
   overflow: hidden;
   background: black;
+  touch-action: none; /* Prevent scroll bounce */
 }
 
 .video-container {
   position: relative;
   width: 100vw;
   height: 100vh;
+  overflow: hidden;
   display: flex;
   justify-content: center;
   align-items: center;
